--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,4 +1,51 @@
 /* Home */
 .home-container {
   display: 'flex';
+  background: #0B0B0B;
+  height: 100%;
+}
+
+.home-body-wrapper {
+  margin: 30px 40px 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.home-card {
+  width: 300px;
+  padding: 15px;
+}
+
+.home-card .home-card-head {
+  width: 100%;
+}
+
+.home-card-head img {
+  width: 100%;
+}
+
+.home-card-body {
+  margin-top: 10px;
+}
+
+.home-card-body h4 {
+  color: white;
+  font-size: 22px;
+  font-weight: 800;
+}
+
+.home-card-body p {
+  color: #555555;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0 15px 0 0;
+}
+
+.home-card-body .view-time {
+  display: flex;
+}
+
+.view-time img {
+  margin-right: 10px;
 }
