--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: start;
   align-items: flex-start;
-  height: 100vh;
+  height: 100%;
   padding: 25px 12px;
   width: 230px;
 }
@@ -91,4 +91,19 @@
   font-size: 18px;
   font-weight: 400;
   margin: 0 0 0 10px;
+}
+
+.last-side .profile {
+  width: 40px;
+  margin-left: 30px;
+}
+
+.user-section {
+  margin-top: 30px;
+}
+
+.user-section h2 {
+  color: #FF7A00;
+  font-size: 24px;
+  font-weight: 600;
 }
