--- a/src/css/SignIn.css
+++ b/src/css/SignIn.css
@@ -2,8 +2,15 @@
   background-color: rgba(210, 210, 210, 0.25);
   border: 2px solid #BCBCBC;
   border-radius: 5px;
+  color: white;
+}
+
+.formCont .control:hover {
+  background-color: rgb(150, 150, 150);
+  transition: 0.5s;
 }
 
 .formCont .control:focus {
   color: white;
+  background-color: rgba(210, 210, 210, 0.25);
 }
