--- a/src/css/Detail.css
+++ b/src/css/Detail.css
@@ -145,5 +145,8 @@
   color: #ffffff;
   font-size: 16px;
   font-weight: 400;
+  width: 100%;
+  box-sizing: border-box;
+  text-align: justify;
 }
 /* Responsivitas */
